# Edexcel-Pseudocode

./: README.md  main.py  pseudo2py.py  pyproject.toml
Translation/: args.py  translation.py
src/Edexcel_Pseudocode/: __init__.py  __main__.py  cli.py  edexcel.py  translation.py
src/Edexcel_Pseudocode/Translation/: translation.py
src/Edexcel_Pseudocode_alternyxx/: __main__.py
src/Edexcel_Pseudocode_alternyxx/Translation/: translation.py
temp/: pseudocode.txt  psuedocode.txt  transpiled.py
tests/: tests.py
