[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Edexcel_Pseudocode_alternyxx"]

[project]
name = "Edexcel-Pseudocode"
version = "0.0.2"
description = "A Pearon International GCSEs pseudocode to Python transpiler"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "alternyxx", email = "alternyxx@gmail.com" }
]
maintainers = [
  {name = "alternyxx", email = "alternyxx@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alternyxx/Edexcel-Pseudocode"

[project.scripts]
edexcel = "Edexcel_Pseudocode.edexcel:main"